[gd_scene load_steps=25 format=3 uid="uid://7ntxuc07kbln"]

[ext_resource type="Script" uid="uid://ds5ymu4wxg7pu" path="res://chapter2/doors/opendoors.gd" id="1_gsnpi"]
[ext_resource type="Texture2D" uid="uid://d1yrjgdfnrsrq" path="res://assets/E.png" id="2_clb7a"]
[ext_resource type="Texture2D" uid="uid://dothpbt8u5xb1" path="res://assets/textures/material6.png" id="3_e1rpd"]
[ext_resource type="Texture2D" uid="uid://c83n0xd647eyd" path="res://assets/NotE.png" id="4_clb7a"]
[ext_resource type="FontFile" uid="uid://vpmakd0urni6" path="res://Undertale-Battle-Font.ttf-5b3f8609511f8e0c8fc5e3287eaa9635.fontdata" id="4_qx72u"]
[ext_resource type="AudioStream" uid="uid://deuwk68fwacjc" path="res://assets/door.mp3" id="5_2a0jy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6iqkm"]
size = Vector3(1, 2, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gsnpi"]
albedo_color = Color(0.5058824, 0.3882353, 0.28235295, 1)
albedo_texture = ExtResource("3_e1rpd")
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_qx72u"]
material = SubResource("StandardMaterial3D_gsnpi")
size = Vector2(1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qx72u"]
albedo_color = Color(0.5058824, 0.3882353, 0.28235295, 1)
albedo_texture = ExtResource("3_e1rpd")
uv1_scale = Vector3(-1, 1, 1)
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_clb7a"]
material = SubResource("StandardMaterial3D_qx72u")
size = Vector2(1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fp0bw"]
albedo_texture = ExtResource("2_clb7a")
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_g543t"]
material = SubResource("StandardMaterial3D_fp0bw")
size = Vector2(0.85, 0.85)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_clb7a"]
albedo_texture = ExtResource("4_clb7a")
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_148xs"]
material = SubResource("StandardMaterial3D_clb7a")
size = Vector2(0.85, 0.85)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u8pyo"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ub2wn"]
material = SubResource("StandardMaterial3D_u8pyo")
size = Vector3(0.1, 2, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tkmqe"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fp0bw"]
material = SubResource("StandardMaterial3D_tkmqe")
size = Vector3(1.2, 0.1, 0.1)

[sub_resource type="Animation" id="Animation_qx72u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("D1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("D1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_clb7a"]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("D1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.5, 0, 0.55), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("D1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.5707964, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gsnpi"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("D1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.5707964, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("D1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.5, 0, 0.55)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_clb7a"]
_data = {
&"RESET": SubResource("Animation_qx72u"),
&"close": SubResource("Animation_clb7a"),
&"open": SubResource("Animation_gsnpi")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_gsnpi"]

[node name="Opendoors" type="Area3D" groups=["interactive_objects"]]
collision_layer = 8
collision_mask = 15
script = ExtResource("1_gsnpi")
keyD = "key"

[node name="D1" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_6iqkm")
debug_color = Color(0.983333, 1, 0, 0.419608)

[node name="StaticBody3D" type="StaticBody3D" parent="D1"]
collision_layer = 8
collision_mask = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="D1/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("BoxShape3D_6iqkm")
debug_color = Color(0.983333, 1, 0, 0.419608)

[node name="Door1" type="MeshInstance3D" parent="D1/StaticBody3D"]
transform = Transform3D(0.9999999, 0, 0, 0, 1, 0, 0, 0, 0.9999999, 0, 0, 0)
mesh = SubResource("QuadMesh_qx72u")
skeleton = NodePath("../../..")

[node name="Door2" type="MeshInstance3D" parent="D1/StaticBody3D"]
transform = Transform3D(-0.9999999, 0, -1.5099579e-07, 0, 1, 0, 1.5099579e-07, 0, -0.9999999, 0, 0, 0)
mesh = SubResource("QuadMesh_clb7a")
skeleton = NodePath("../../..")

[node name="DoorE" type="MeshInstance3D" parent="D1"]
transform = Transform3D(1, 0, -2.3841858e-07, 0, 1, 0, 2.3841858e-07, 0, 1, -2.7179246e-09, -0.243, 0.018)
visible = false
mesh = SubResource("QuadMesh_g543t")
skeleton = NodePath("../..")

[node name="DoorENot" type="MeshInstance3D" parent="D1"]
transform = Transform3D(1, 0, -2.3841858e-07, 0, 1, 0, 2.3841858e-07, 0, 1, -2.7179246e-09, -0.243, 0.018)
visible = false
mesh = SubResource("QuadMesh_148xs")
skeleton = NodePath("../..")

[node name="DoorE2" type="MeshInstance3D" parent="D1"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 2.220446e-16, -0.243, -0.018)
visible = false
mesh = SubResource("QuadMesh_g543t")
skeleton = NodePath("../..")

[node name="Label3D" type="Label3D" parent="D1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.519, 0.01)
visible = false
texture_filter = 0
text = "need a key"
font = ExtResource("4_qx72u")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.55, 0, 0)
mesh = SubResource("BoxMesh_ub2wn")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.55, 0, 0)
mesh = SubResource("BoxMesh_ub2wn")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0)
mesh = SubResource("BoxMesh_fp0bw")

[node name="AudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_2a0jy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_clb7a")
}

[node name="EnemyOpen" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyOpen"]
shape = SubResource("BoxShape3D_gsnpi")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="EnemyOpen" to="." method="_on_enemy_open_body_entered"]
[connection signal="body_exited" from="EnemyOpen" to="." method="_on_enemy_open_body_exited"]
